# kybot_stm32f1

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  makefile
cmake/: CMakeLists_env.txt  CMakeLists_env.txt.templet  gcc_stm32.cmake  gcc_stm32f1.cmake
inc/: all_file_list.h
inc/app/: allan.h  buffer.h  controller.h  datetime.h  delay.h  encrypt.h  event.h  feedback.h  file_list.h  halfsecond.h  imu.h  kalman.h  log.h  param.h  protocol.h  shell.h  user_conf.h  workdata.h
inc/at/: at.h  at_base_cmd.h  at_buzzer_cmd.h  at_cmd.h  at_encoder_cmd.h  at_encrypt_cmd.h  at_imu_cmd.h  at_led_cmd.h  at_log_cmd.h  at_motor_cmd.h  at_pid_cmd.h  at_port.h  at_utils.h  at_version.h  at_wheel_cmd.h  file_list.h
inc/base/: debug.h  file_id.h  file_list.h
inc/bsp/: adc.h  adxl345.h  buzzer.h  eeprom.h  encoder.h  file_list.h  hmc5883.h  i2c1_hw.h  i2c_sw.h  key.h  l3g4200.h  led.h  motor.h  mpu6050.h  stm32f10x_conf.h  tim.h  usart.h
keil/: JLinkLog.txt  project.Opt  project.uvopt  project.uvproj  project.uvproj.saved_uv4
keil/settings/: project.wsdt
lib/CMSIS/CM3/CoreSupport/: CMakeLists.txt
lib/CMSIS/CM3/DeviceSupport/ST/STM32F10x/: CMakeLists.txt
lib/STM32F10x_StdPeriph_Driver/src/: CMakeLists.txt
matlab/: allan.m  calcu_average_vari.m  calcu_vari.m  gyr.txt  gyr_kalman1.txt  gyr_kalman3_1.txt  gyr_kalman3_2.txt  gyr_kalman3_3.txt  kalman.m  plot_vari.m
matlab/10s/: 1.txt  10s_allan_vari.xls
matlab/1s/: 1.txt  10.txt  1s_allan_vari.xls  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
matlab/2s/: 1.txt  2s_allan_vari.xls
matlab/30s/: 1.txt  30s_allan_vari.xls
matlab/3s/: 1.txt  3s_allan_vari.xls
matlab/4s/: 1.txt  4s_allan_vari.xls
matlab/5s/: 1.txt  5s_allan_vari.xls
matlab/60s/: 1.txt  60s_allan_vari.xls
matlab/6s/: 1.txt  6s_allan_vari.xls
matlab/7s/: 1.txt  7s_allan_vari.xls
matlab/8s/: 1.txt  8s_allan_vari.xls
matlab/9s/: 1.txt  9s_allan_vari.xls
matlab/icra2014/srcs/: accCostFunctLSQNONLIN.m  calibrate.m
src/app/: allan.c  buffer.c  controller.lib  datetime.c  delay.c  encrypt.lib  event.c  feedback.lib  halfsecond.c  imu.c  kalman.c  log.lib  main.c  param.c  protocol.lib  shell.lib  workdata.c
src/base/: debug.c  file_id.c
src/bsp/: adc.c  adxl345.c  buzzer.c  eeprom.c  encoder.c  hmc5883  i2c1_hw.c  i2c_sw.c  key.c  l3g4200.c  led.c  motor.c  mpu6050  stm32f10x_it.c  tim.c  usart.c
udev/: 70-stlinkv2.rules  setup_udev_rule.sh
